--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Kalkulator Trigonometri dengan Grafikkkkkkkk</h2>
+    <h2>Kalkulator Trigonometri dengan Grafik</h2>
     <label for="angle">Masukkan Sudut:</label>
     <input type="number" id="angle" placeholder="Masukkan sudut">
 
